# BannerGuard

./: README.md
models/ocr/: text_transcriber.py
models/ocr/custom_EasyOCR/user_network/: custom.yaml
models/pwm/: main.py
notebooks/: README.md  TrainYolov8.ipynb  classifier.ipynb
web/: handler.php  index.php  workspace.php
web/comparisons/: index.php
web/css/: style.css  users.css
web/php/: db.php  isResults.php
web/presentation/: index.php
worker/: _cli.py  fisheye.py  pyproject.toml  requirements-dev.txt
worker/ai/: .gitignore  _t.py  ai.py
worker/ai/content/runs/segment/train/: args.yaml  events.out.tfevents.1724322183.f1672983b23c.696.0  results.csv
worker/ai2/: infer.py
worker/app/: img_manipulation.py  tois_aggregation.py  types.py
